# ad-controle-financeiro-bot

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
ad_controle_financeiro_bot/: TelegramBot.py  __init__.py  dataset.py  driveBot.py  features.py  plots.py  telegramBot.py
ad_controle_financeiro_bot/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: visualizacoes.ipynb
visualization/: DataVisualization.py
