[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ad_controle_financeiro_bot"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Samuel Crisostomo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ad_controle_financeiro_bot"]
force_sort_within_sections = true
